updated reservation logic
