# internal/delivery/http/reservation.go
@@ -37,41 +37,39 @@ func (h *httpDelivery) registerReservationHandlers(v1 *echo.Group) {
 //	@Failure		500		{object}	DefaultResponse[error]						"Внутренняя ошибка сервера"
 //	@Router			/reservation [get]
 func (h *httpDelivery) getReservation(c echo.Context) error {
-	ctx, span := h.tracer.Start(c.Request().Context(), "httpDelivery.getReservation")
+	_, span := h.tracer.Start(c.Request().Context(), "httpDelivery.getReservation")
 	defer span.End()
 
-	userId, ok := c.Get("user_id").(string)
-	if !ok {
-		return c.JSON(http.StatusInternalServerError, ErrorResponse("failed to get user_id from context"))
-	}
+	return nil
 
-	parsed, err := uuid.Parse(userId)
-	if err != nil {
-		return c.JSON(http.StatusUnauthorized, ErrorResponse("invalid user id"))
-	}
-
-	var req getReservationRequest
-	if err = c.Bind(&req); err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
-	}
-
-	if req.From.IsZero() && req.To.IsZero() {
-		return echo.NewHTTPError(http.StatusBadRequest, ErrorResponse("from, to, and people_num are required"))
-	}
-
-	resp, err := h.service.Reservation.GetUserReservations(ctx, model.CinemaReservation{
-		StartTime: req.From,
-		EndTime:   req.To,
-		UserID:    parsed,
-	})
-	if err != nil {
-		return h.handleErrResponse(c, err)
-	}
-
-	return c.JSON(http.StatusOK, DefaultResponse[[]model.CinemaReservation]{
-		Status: "success",
-		Data:   resp,
-	})
+	//userId, ok := c.Get("user_id").(string)
+	//if !ok {
+	//	return c.JSON(http.StatusInternalServerError, ErrorResponse("failed to get user_id from context"))
+	//}
+	//
+	//parsed, err := uuid.Parse(userId)
+	//if err != nil {
+	//	return c.JSON(http.StatusUnauthorized, ErrorResponse("invalid user id"))
+	//}
+	//
+	//var req getReservationRequest
+	//if err = c.Bind(&req); err != nil {
+	//	return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	//}
+	//
+	////resp, err := h.service.Reservation.GetUserReservations(ctx, model.CinemaReservation{
+	////	StartTime: req.From,
+	////	EndTime:   req.To,
+	////	UserID:    parsed,
+	////})
+	////if err != nil {
+	////	return h.handleErrResponse(c, err)
+	////}
+	//
+	//return c.JSON(http.StatusOK, DefaultResponse[[]model.CinemaReservation]{
+	//	Status: "success",
+	//	Data:   resp,
+	//})
 }
 
 // approveReservation godoc
@@ -161,12 +159,17 @@ func (h *httpDelivery) createReservation(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, ErrorResponse("failed to get role from context"))
 	}
 
-	if err = h.service.Reservation.MakeReservation(ctx, &model.CinemaReservation{
-		StartTime: req.From,
-		EndTime:   req.To,
-		PeopleNum: req.PeopleNum,
-		UserID:    parsed,
-	}, role, username); err != nil {
+	parsedDate, err := time.Parse("2006-01-02", req.Date)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, ErrorResponse("invalid date format (YYYY-MM-DD)"))
+	}
+
+	positions := make([]int16, 0, len(req.TimeSlots))
+	for _, p := range req.TimeSlots {
+		positions = append(positions, int16(p))
+	}
+
+	if err = h.service.Reservation.MakeReservation(ctx, parsed, parsedDate, positions, req.PeopleNum, role, username); err != nil {
 		return h.handleErrResponse(c, err)
 	}
 
@@ -200,24 +203,37 @@ func (h *httpDelivery) getFreeSlots(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, ErrorResponse(err.Error()))
 	}
 
-	if req.From.IsZero() || req.To.IsZero() {
-		return c.JSON(http.StatusBadRequest, ErrorResponse("from and to are required"))
+	if err := validate.Struct(&req); err != nil {
+		return c.JSON(http.StatusBadRequest, ErrorResponse(err.Error()))
 	}
 
-	res, err := h.service.Reservation.GetFreeSlots(ctx, req.From, req.To)
+	if req.Date == "" {
+		return c.JSON(http.StatusBadRequest, ErrorResponse("date is required"))
+	}
+
+	parsedDate, err := time.Parse("2006-01-02", req.Date)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, ErrorResponse("invalid date format (YYYY-MM-DD)"))
+	}
+
+	free, pairs, err := h.service.Reservation.GetFreeSlots(ctx, parsedDate)
 	if err != nil {
 		return h.handleErrResponse(c, err)
 	}
 
-	return c.JSON(http.StatusOK, DefaultResponse[[]model.TimeRange]{
-		Data:   res,
+	return c.JSON(http.StatusOK, DefaultResponse[getFreeSlotsResponse]{
+		Data:   getFreeSlotsResponse{Free: free, Pairs: pairs},
 		Status: "success",
 	})
 }
 
 type getReservationRequest struct {
-	From time.Time `query:"from"`
-	To   time.Time `query:"to"`
+	Date string `query:"date" validate:"required"`
+}
+
+type getFreeSlotsResponse struct {
+	Free  []model.DailySlot `json:"free_slots"`
+	Pairs [][2]int16        `json:"free_pairs"`
 }
 
 type approveReservationRequest struct {
@@ -225,7 +241,7 @@ type approveReservationRequest struct {
 }
 
 type createReservationRequest struct {
-	From      time.Time `json:"from" validate:"required"`
-	To        time.Time `json:"to" validate:"required,gtfield=From"`
-	PeopleNum uint8     `json:"people_num" validate:"required,gt=1,lt=12"`
+	TimeSlots []int  `json:"time_slots" validate:"required"`
+	PeopleNum uint8  `json:"people_num" validate:"required,gt=1,lt=12"`
+	Date      string `json:"date" validate:"required"` //2026-01-17
 }
